--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
-    </head>
-    <body>
-        <h3>
-            Hello,world!
-        </h3>
-    </body>
+<head>
+    <title>심수연의 홈페이지-타이틀</title>
+    <link href="./practice.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./blog_list.html">Blog</a>
+        <a href="./about_me.html">About Me</a>
+    </nav>
+
+    <h1>심수연의 홈페이지</h1>
+    <h2>두번째 크기 헤드라인</h2>
+    <h3>세번째 크기 헤드라인</h3>
+    <h4>네번째 크기 헤드라인</h4>
+    <h5>다섯번째 크기 헤드라인</h5>
+
+    <p>문단은 p로 쓰세요. p는 아마도 Paragraph의 앞 자를 따 온 것이겠죠?</p>
+    <a href="https://www.google.com">Go to google</a>
+    <hr />
+    <img src="./images/stay_funky.jpg" width="600px">
+</body>
+
 </html>
